tests/NormalTests/paczka1/small_fuzzy/39656349.err
Error in line 5: vKxTgI9k5 A140 242,7
Error in line 6: bWm A140 76,1
